* diredc NEWS
** 2024-01

+ New feature: customizable parameters for the diredc frame.

  + See new defcustom variables 'diredc-frame-parameters' and
    'diredc-frame-inherited-parameters'.

** 2022-01

+ New feature to fontify diredc-browse buffers

** 2021-06

+ New feature to add a header line to diredc buffers.

  + When entries are either marked or flagged for deletion, the header
    line displays a tally of the number of files, directories, and
    links marked / flagged, and the size of the files.

+ Improvements to toggling window dedication and diredc features when
  disabling and re-enabling M-x diredc-mode.

+ Allow asynchronous shell commands to over-ride shell aliases (ie.
  don't interpret a leading '\' as part of a command name for
  validation purposes).

** 2021-05

+ New feature to add many sorting options to diredc buffers.

  + All "ls" sort options, plus LC_COLLATE modification, plus sorting
    by chmod, owner, or group.

  + Improve UI for ease-of-use.

+ New feature to fontify the current line of the current diredc buffer
  independently of the selected line of the 'other' diredc buffer.

  + Ref: face diredc-hl-current-buffer

+ New feature to hot-swap dired buffers, bound by default to "M-u"

  + Inspired by midnight commander's "C-u", but performs a true and
    complete swap, including buffer histories. Operates also on
    diredc-browse buffers.

** 2021-04

+ Asynchronous processes by default survive even after exiting Emacs.

  + See defcustom 'diredc-async-processes-are-persistent' and
    discussion in README

+ New help functions bound by default to "?", "? h", and "C-DEL ?"

  + Required installation of external package 'key-assist' (MELPA, Github)

+ The state of 'dired-omit-mode' is remembered when navigating.

** 2021-03

+ Quick-browse mode can be configured to exclude files by their
  extensions, coding-systems, or mime-type.

  + See defcustoms: 'diredc-browse-exclude-file-extensions' and